--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,13 +4,12 @@ spring:
       username: ${DATASOURCE_USER}
       password: ${DATASOURCE_PASS}
       maximum-pool-size: 20
-    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=spring
   jpa:
     hibernate:
       ddl-auto: create-drop
     open-in-view: false
     defer-datasource-initialization: true
-    show-sql: false
+    show-sql: true
   sql:
     init:
       mode: always
